# flake

./: CMakeLists.txt  README.md  index.html  stylesheet.css
flake/: CMakeLists.txt
flake/flake_media/: config.json  licenses.txt
flake/flake_media/kernels/: .clcomplete
flake/flake_media/kernels/flake/flakes/: mover.cl
flake/flake_media/kernels/flake/planar/: vertex_buffer_conversions.cl
flake/flake_media/scenes/avz/: description.json  house1.mtl  house2.mtl
flake/flake_media/scenes/avz_lowpoly/: AVZ.mtl  Boden.mtl  description.json  scene.binvox
flake/flake_media/scenes/cone/: cone.blend1
flake/flake_media/scenes/coordinate_test/: bottom.mtl  description.json  top.mtl  xaxis.mtl  yaxis.mtl  zaxis.mtl
flake/flake_media/scenes/factory/: binvox_it  description.json  factory.blend  factory.blend1  factory.blend2  gesamt.mtl
flake/flake_media/scenes/house/: Fabrik.mtl  Schornstein.mtl  scene.binvox
flake/flake_media/scenes/landhaus/: Boden.mtl  Haus.mtl  description.json
flake/flake_media/scenes/sphere/: scene.binvox
flake/flake_media/shaders/: arrow.cg  flakes.cg  model.cg  raycaster.cg  skydome.cg  snow_cover.cg  volume_arrow.cg
flake/flake_media/shaders/postprocessing/: blur_v.cg  finalize.cg
flake/flake_media/voxelized_models/: coordinate_test.raw
flake/include/flake/: basic_scoped_ostream_file_redirection_fwd.hpp  basic_scoped_ostream_file_redirection_impl.hpp  catch_statements.hpp  exception.hpp  media_path.hpp  media_path_from_string.hpp  message_box.hpp
flake/include/flake/notifications/: message.hpp  object.hpp  text.hpp  time_to_live.hpp
flake/include/flake/planar/: cursor_splatter.hpp
flake/include/flake/planar/conversion/: object.hpp  (+5 more)
flake/include/flake/postprocessing/: context.hpp  context_fwd.hpp  fullscreen_quad.hpp  fullscreen_quad_fwd.hpp
flake/include/flake/skydome/: latitude.hpp  object.hpp  texture_path.hpp  y_translation.hpp
flake/include/flake/test/: base.hpp  camera_manager.hpp  feature.hpp  feature_sequence.hpp  json_identifier.hpp  optional_key_code.hpp  update_features_from_json.hpp
flake/include/flake/time_modifier/: object.hpp  object_fwd.hpp
flake/src/: basic_scoped_ostream_file_redirection.cpp  media_path.cpp  media_path_from_string.cpp  message_box.cpp  save_l8_texture_to_file.cpp
flake/src/notifications/: message.cpp  object.cpp
flake/src/planar/: cursor_splatter.cpp
flake/src/planar/conversion/: object.cpp
flake/src/planar/monitor/: arrows.cpp  font_axis_policy.cpp  parent.cpp  texture.cpp
flake/src/postprocessing/: context.cpp  fullscreen_quad.cpp
flake/src/skydome/: object.cpp
flake/src/test/: base.cpp  camera_manager.cpp  feature.cpp  update_features_from_json.cpp
flake/src/test/information/: manager.cpp
flake/src/time_modifier/: kernel.cpp  object.cpp
flake/src/volume/arrows/: manager.cpp  object.cpp
flake/src/volume/flakes/: manager.cpp  mover.cpp
flake/src/volume/snow_cover/: object.cpp  parallel_update.cpp  scoped.cpp
flakelib/: CMakeLists.txt
flakelib/flakelib_media/kernels/: Makefile
flakelib/flakelib_media/kernels/flakelib/: random_float_value.cl  scan.cl
flakelib/flakelib_media/kernels/marching_cubes/: main.cl
flakelib/include/flakelib/: class_symbol.hpp  console_percent_bar.hpp  duration.hpp  exception.hpp  log_context.hpp  log_location.hpp  log_parameters.hpp  map_key_sequence.hpp  media_path_from_string.hpp  scan.hpp  scoped_frame_limiter.hpp
flakelib/include/flakelib/buffer/: linear_view_impl.hpp  planar_view_fwd.hpp  volume_view.hpp  volume_view_fwd.hpp
flakelib/include/flakelib/buffer_pool/: linear_lock.hpp  linear_lock_decl.hpp  linear_lock_impl.hpp  object.hpp  planar_lock.hpp  planar_lock_impl.hpp  volume_lock_fwd.hpp  volume_lock_impl.hpp
flakelib/include/flakelib/cl/: float2.hpp  kernel.hpp  kernel_fwd.hpp  kernel_unique_ptr.hpp  planar_image_view_to_cl_image.hpp  program.hpp  program_context.hpp  program_context_fwd.hpp  uint4.hpp
flakelib/include/flakelib/marching_cubes/: iso_level.hpp
flakelib/include/flakelib/planar/: boundary_buffer_view.hpp  float2_view.hpp  float_buffer_lock.hpp  unique_float2_buffer_lock.hpp  unique_float_buffer_lock.hpp
flakelib/include/flakelib/scan/: batch_size.hpp  object.hpp  value_type.hpp
flakelib/include/flakelib/splatter/: object.hpp  object_fwd.hpp
flakelib/include/flakelib/timer/: basic.hpp  basic_fwd.hpp  basic_impl.hpp  wobject.hpp
flakelib/include/flakelib/utility/: fill_buffer.hpp  fill_buffer_fwd.hpp  mix_buffers.hpp
flakelib/include/flakelib/value_modulator/: maximum.hpp  minimum.hpp  object.hpp  value_modify_callback.hpp  value_modify_callback_fn.hpp
flakelib/include/flakelib/volume/: boundary_buffer_view.hpp  float4_buffer_lock.hpp  float4_view.hpp  gradient.hpp  gradient_fwd.hpp  grid_size.hpp  retrieve_filled_float_buffer.hpp  retrieve_zero_float4_buffer.hpp  unique_float4_buffer_lock.hpp  unique_float_buffer_lock.hpp  unique_uint_buffer_lock.hpp  velocity_buffer_view.hpp
flakelib/src/: exception.cpp  log.cpp  log_location.cpp  log_parameters.cpp  media_path.cpp  media_path_from_string.cpp  scan.cpp  scoped_frame_limiter.cpp
flakelib/src/buffer_pool/: object.cpp
flakelib/src/cl/: kernel.cpp  planar_image_view_to_cl_image.cpp  planar_image_view_to_float_buffer.cpp  program.cpp  program_context.cpp
flakelib/src/marching_cubes/cpu/: implementation.cpp  object.cpp
flakelib/src/marching_cubes/gpu/: manager.cpp  object.cpp
flakelib/src/scan/: object.cpp
flakelib/src/splatter/: object.cpp
flakelib/src/splatter/rectangle/: object.cpp
flakelib/src/utility/: fill_buffer.cpp  mix_buffers.cpp
flakelib/src/value_modulator/: object.cpp
flakelib/src/volume/: gradient.cpp  retrieve_filled_float_buffer.cpp  retrieve_zero_float4_buffer.cpp
flakelib/src/volume/conversion/: object.cpp
tests/: CMakeLists.txt
tests/include/flake/tests/: buoyancy.hpp  density_visualization.hpp  flakes.hpp  marching_cubes.hpp  scan.hpp  solipsistic.hpp  vorticity.hpp
tests/src/tests/: buoyancy.cpp  density_visualization.cpp  flakes.cpp  marching_cubes.cpp  scan.cpp  solipsistic.cpp  vorticity.cpp
(+1427 files in other folders)
