set(
	FLAKE_FILES
	flake/include/flake/basic_scoped_ostream_file_redirection_decl.hpp
	flake/include/flake/basic_scoped_ostream_file_redirection_fwd.hpp
	flake/include/flake/basic_scoped_ostream_file_redirection_impl.hpp
	flake/include/flake/catch_statements.hpp
	flake/include/flake/exception.hpp
	flake/include/flake/media_path.hpp
	flake/include/flake/media_path_from_string.hpp
	flake/include/flake/message_box.hpp
	flake/include/flake/notifications/message.hpp
	flake/include/flake/notifications/object.hpp
	flake/include/flake/notifications/object_fwd.hpp
	flake/include/flake/notifications/text.hpp
	flake/include/flake/notifications/time_to_live.hpp
	flake/include/flake/planar/conversion/arrow_scale.hpp
	flake/include/flake/planar/conversion/constant_addition.hpp
	flake/include/flake/planar/conversion/grid_scale.hpp
	flake/include/flake/planar/conversion/object.hpp
	flake/include/flake/planar/conversion/object_fwd.hpp
	flake/include/flake/planar/conversion/scaling_factor.hpp
	flake/include/flake/planar/conversion/x_coordinate_file.hpp
	flake/include/flake/planar/conversion/y_coordinate_file.hpp
	flake/include/flake/planar/cursor_splatter.hpp
	flake/include/flake/planar/monitor/arrow_scale.hpp
	flake/include/flake/planar/monitor/arrow_vf/format.hpp
	flake/include/flake/planar/monitor/arrow_vf/part.hpp
	flake/include/flake/planar/monitor/arrow_vf/position.hpp
	flake/include/flake/planar/monitor/arrows.hpp
	flake/include/flake/planar/monitor/border_size.hpp
	flake/include/flake/planar/monitor/child.hpp
	flake/include/flake/planar/monitor/child_fwd.hpp
	flake/include/flake/planar/monitor/child_list.hpp
	flake/include/flake/planar/monitor/constant_addition.hpp
	flake/include/flake/planar/monitor/dim.hpp
	flake/include/flake/planar/monitor/dummy_sprite/buffers.hpp
	flake/include/flake/planar/monitor/dummy_sprite/choices.hpp
	flake/include/flake/planar/monitor/dummy_sprite/collection.hpp
	flake/include/flake/planar/monitor/dummy_sprite/object.hpp
	flake/include/flake/planar/monitor/dummy_sprite/order.hpp
	flake/include/flake/planar/monitor/dummy_sprite/state_choices.hpp
	flake/include/flake/planar/monitor/dummy_sprite/state_object.hpp
	flake/include/flake/planar/monitor/dummy_sprite/state_options.hpp
	flake/include/flake/planar/monitor/dummy_sprite/state_parameters.hpp
	flake/include/flake/planar/monitor/font_axis_policy.hpp
	flake/include/flake/planar/monitor/font_color.hpp
	flake/include/flake/planar/monitor/grid_dimensions.hpp
	flake/include/flake/planar/monitor/grid_scale.hpp
	flake/include/flake/planar/monitor/name.hpp
	flake/include/flake/planar/monitor/optional_background_texture.hpp
	flake/include/flake/planar/monitor/optional_projection.hpp
	flake/include/flake/planar/monitor/parent.hpp
	flake/include/flake/planar/monitor/parent_fwd.hpp
	flake/include/flake/planar/monitor/rect.hpp
	flake/include/flake/planar/monitor/scalar.hpp
	flake/include/flake/planar/monitor/scaling_factor.hpp
	flake/include/flake/planar/monitor/texture.hpp
	flake/include/flake/planar/monitor/texture_fwd.hpp
	flake/include/flake/planar/monitor/texture_size.hpp
	flake/include/flake/postprocessing/context.hpp
	flake/include/flake/postprocessing/context_fwd.hpp
	flake/include/flake/postprocessing/fullscreen_quad.hpp
	flake/include/flake/postprocessing/fullscreen_quad_fwd.hpp
	flake/include/flake/postprocessing/vf/format.hpp
	flake/include/flake/postprocessing/vf/format_part.hpp
	flake/include/flake/postprocessing/vf/position.hpp
	flake/include/flake/postprocessing/vf/texcoord.hpp
	flake/include/flake/save_l8_texture_to_file.hpp
	flake/include/flake/scoped_ostream_file_redirection.hpp
	flake/include/flake/scoped_wostream_file_redirection.hpp
	flake/include/flake/skydome/index_format.hpp
	flake/include/flake/skydome/latitude.hpp
	flake/include/flake/skydome/longitude.hpp
	flake/include/flake/skydome/object.hpp
	flake/include/flake/skydome/object_fwd.hpp
	flake/include/flake/skydome/size_type.hpp
	flake/include/flake/skydome/texture_path.hpp
	flake/include/flake/skydome/vf/format.hpp
	flake/include/flake/skydome/vf/format_part.hpp
	flake/include/flake/skydome/vf/position.hpp
	flake/include/flake/skydome/vf/texcoord.hpp
	flake/include/flake/skydome/y_translation.hpp
	flake/include/flake/test/base.hpp
	flake/include/flake/test/camera_manager.hpp
	flake/include/flake/test/feature.hpp
	flake/include/flake/test/feature_fwd.hpp
	flake/include/flake/test/feature_sequence.hpp
	flake/include/flake/test/information/identifier.hpp
	flake/include/flake/test/information/manager.hpp
	flake/include/flake/test/information/manager_fwd.hpp
	flake/include/flake/test/information/object.hpp
	flake/include/flake/test/information/object_fwd.hpp
	flake/include/flake/test/information/pull_function.hpp
	flake/include/flake/test/information/pull_function_fn.hpp
	flake/include/flake/test/information/string_conversion_adapter.hpp
	flake/include/flake/test/json_identifier.hpp
	flake/include/flake/test/update_features_from_json.hpp
	flake/include/flake/time_modifier/kernel.hpp
	flake/include/flake/time_modifier/multiplier.hpp
	flake/include/flake/time_modifier/object.hpp
	flake/include/flake/time_modifier/object_fwd.hpp
	flake/include/flake/volume/arrows/manager.hpp
	flake/include/flake/volume/arrows/manager_fwd.hpp
	flake/include/flake/volume/arrows/object.hpp
	flake/include/flake/volume/arrows/object_fwd.hpp
	flake/include/flake/volume/arrows/vf/color.hpp
	flake/include/flake/volume/arrows/vf/color_format.hpp
	flake/include/flake/volume/arrows/vf/format.hpp
	flake/include/flake/volume/arrows/vf/format_part.hpp
	flake/include/flake/volume/arrows/vf/position.hpp
	flake/include/flake/volume/density_visualization/raycaster/debug_output.hpp
	flake/include/flake/volume/density_visualization/raycaster/object.hpp
	flake/include/flake/volume/density_visualization/raycaster/object_fwd.hpp
	flake/include/flake/volume/density_visualization/raycaster/step_size.hpp
	flake/include/flake/volume/density_visualization/raycaster/vf/format.hpp
	flake/include/flake/volume/density_visualization/raycaster/vf/format_part.hpp
	flake/include/flake/volume/density_visualization/raycaster/vf/position.hpp
	flake/include/flake/volume/flakes/activity_view.hpp
	flake/include/flake/volume/flakes/collision_increment.hpp
	flake/include/flake/volume/flakes/count.hpp
	flake/include/flake/volume/flakes/gravity_magnitude.hpp
	flake/include/flake/volume/flakes/manager.hpp
	flake/include/flake/volume/flakes/manager_fwd.hpp
	flake/include/flake/volume/flakes/maximum_size.hpp
	flake/include/flake/volume/flakes/minimum_size.hpp
	flake/include/flake/volume/flakes/mover.hpp
	flake/include/flake/volume/flakes/point_size_view.hpp
	flake/include/flake/volume/flakes/position_view.hpp
	flake/include/flake/volume/flakes/snow_density_view.hpp
	flake/include/flake/volume/flakes/texture.hpp
	flake/include/flake/volume/flakes/texture_tile_count.hpp
	flake/include/flake/volume/flakes/texture_tile_size.hpp
	flake/include/flake/volume/flakes/vf/format.hpp
	flake/include/flake/volume/flakes/vf/point_size.hpp
	flake/include/flake/volume/flakes/vf/point_size_part.hpp
	flake/include/flake/volume/flakes/vf/position.hpp
	flake/include/flake/volume/flakes/vf/position_part.hpp
	flake/include/flake/volume/flakes/vf/texcoord.hpp
	flake/include/flake/volume/flakes/vf/texcoord_part.hpp
	flake/include/flake/volume/snow_cover/flat_texture.hpp
	flake/include/flake/volume/snow_cover/object.hpp
	flake/include/flake/volume/snow_cover/object_fwd.hpp
	flake/include/flake/volume/snow_cover/parallel_update.hpp
	flake/include/flake/volume/snow_cover/parallel_update_fwd.hpp
	flake/include/flake/volume/snow_cover/scoped.hpp
	flake/include/flake/volume/snow_cover/scoped_fwd.hpp
	flake/include/flake/volume/snow_cover/steep_texture.hpp
	flake/include/flake/volume/snow_cover/sun_direction.hpp
	flake/include/flake/volume/snow_cover/texture_repeats.hpp
	flake/include/flake/volume/sun/object_fwd.hpp
	flake/src/basic_scoped_ostream_file_redirection.cpp
	flake/src/exception.cpp
	flake/src/media_path.cpp
	flake/src/media_path_from_string.cpp
	flake/src/message_box.cpp
	flake/src/notifications/message.cpp
	flake/src/notifications/object.cpp
	flake/src/planar/conversion/object.cpp
	flake/src/planar/cursor_splatter.cpp
	flake/src/planar/monitor/arrows.cpp
	flake/src/planar/monitor/child.cpp
	flake/src/planar/monitor/font_axis_policy.cpp
	flake/src/planar/monitor/parent.cpp
	flake/src/planar/monitor/texture.cpp
	flake/src/postprocessing/context.cpp
	flake/src/postprocessing/fullscreen_quad.cpp
	flake/src/save_l8_texture_to_file.cpp
	flake/src/skydome/object.cpp
	flake/src/test/base.cpp
	flake/src/test/camera_manager.cpp
	flake/src/test/feature.cpp
	flake/src/test/information/manager.cpp
	flake/src/test/information/object.cpp
	flake/src/test/update_features_from_json.cpp
	flake/src/time_modifier/kernel.cpp
	flake/src/time_modifier/object.cpp
	flake/src/volume/arrows/manager.cpp
	flake/src/volume/arrows/object.cpp
	flake/src/volume/density_visualization/raycaster/object.cpp
	flake/src/volume/flakes/manager.cpp
	flake/src/volume/flakes/mover.cpp
	flake/src/volume/snow_cover/object.cpp
	flake/src/volume/snow_cover/parallel_update.cpp
	flake/src/volume/snow_cover/scoped.cpp
)

fcppt_utils_append_source_dir_and_make_groups(
	"${FLAKE_FILES}"
	FLAKE_FILES_ABS)

set(
	INSTALL_MEDIA_DIR
	${FCPPT_UTILS_INSTALL_DATA_DIR}/flake_media)

find_package(
	FcpptThreads
	REQUIRED)

include(
	FcpptSymbol)

set(
	FLAKELIB_HELPER_STATIC_LINK_FLAG
	FLAKELIB_HELPER_STATIC_LINK
)

fcppt_generate_symbol_header(
	STATIC_LINK_FLAG
		${FLAKELIB_HELPER_STATIC_LINK_FLAG}
	EXPORTS_NAME
		flakelib_helper_library
	SYMBOL_NAME
		FLAKE_DETAIL
)

include(
	SGECustomPath
)

sge_config_add_custom_path(
	flake
	flake_media
	${CMAKE_SOURCE_DIR}/flake/flake_media
	${CMAKE_INSTALL_PREFIX}/${INSTALL_MEDIA_DIR}
	MEDIA_PATH_INCLUDES
)

function(
	make_flakelib_helper_library
	TARGETNAME
	VARIANT
)
	add_library(
		${TARGETNAME}
		${VARIANT}
		${FLAKE_FILES_ABS})

	fcppt_utils_interface_static_link(
		${TARGETNAME}
		${VARIANT}
		${FLAKELIB_HELPER_STATIC_LINK_FLAG})

	fcppt_utils_set_target_compiler_flags(
		${TARGETNAME}
		ADDITIONAL_FLAGS
		${FcpptThreads_DEFINITIONS})

	target_link_libraries(
		${TARGETNAME}
		PRIVATE
		${fcppt_core_TARGET}
		${fcppt_log_TARGET}
		${sgecamera_TARGET}
		${sgecg_TARGET}
		${sgecharconv_TARGET}
		${sgefont_TARGET}
		${sgefontdraw_TARGET}
		${sgeimagecolor_TARGET}
		${sgeimage2d_TARGET}
		${sgeinput_TARGET}
		${sgemedia_TARGET}
		${sgeopencl_TARGET}
		${sgeparse_TARGET}
		${sgeparsejson_TARGET}
		${sgerenderer_TARGET}
		${sgerucksack_TARGET}
		${sgeshader_TARGET}
		${sgesprite_TARGET}
		${sgesystems_TARGET}
		${sgetexture_TARGET}
		${sgetimer_TARGET}
		${sgeviewport_TARGET}
		${sgewindow_TARGET}
		${FcpptThreads_LIBRARIES}
		${flakelib_TARGET})

	target_include_directories(
		${TARGETNAME}
		PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/include
		${MEDIA_PATH_INCLUDES}
		PRIVATE
		${CMAKE_BINARY_DIR}/include)

	install(
		TARGETS
		${TARGETNAME}
		DESTINATION
		${CMAKE_INSTALL_LIBDIR})
endfunction()

if(
	ENABLE_STATIC
)
	fcppt_utils_static_link_name(
		flakelib_helper_library
		STATIC_NAME
	)

	make_flakelib_helper_library(
		${STATIC_NAME}
		STATIC
	)
endif()

if(
	ENABLE_SHARED
)
	make_flakelib_helper_library(
		flakelib_helper_library
		SHARED
	)
endif()
